[gd_scene load_steps=5 format=3 uid="uid://da20neugtmy2i"]

[ext_resource type="Script" path="res://Scripts/wax_login.gd" id="1_2ginq"]
[ext_resource type="StyleBox" uid="uid://bq2c63fexm4mw" path="res://Styles/WAXButton.tres" id="1_f1dwy"]
[ext_resource type="StyleBox" uid="uid://cpwuxfiiuaa2l" path="res://Styles/WAXButtonHover.tres" id="3_fnfcq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uvkxa"]
bg_color = Color(0.188235, 0.505882, 0.580392, 1)

[node name="WaxLogin" type="Node2D"]
script = ExtResource("1_2ginq")

[node name="Panel" type="Panel" parent="."]
offset_left = 48.0
offset_top = 46.0
offset_right = 277.0
offset_bottom = 185.0
theme_override_styles/panel = SubResource("StyleBoxFlat_uvkxa")

[node name="WCW" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 40.0
offset_top = 33.0
offset_right = 186.0
offset_bottom = 64.0
theme_override_styles/normal = ExtResource("1_f1dwy")
theme_override_styles/hover = ExtResource("3_fnfcq")
theme_override_styles/pressed = ExtResource("1_f1dwy")
theme_override_styles/focus = ExtResource("1_f1dwy")
text = "WAX Cloud Wallet"

[node name="Anchor" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 41.0
offset_top = 79.0
offset_right = 186.0
offset_bottom = 110.0
theme_override_styles/normal = ExtResource("1_f1dwy")
theme_override_styles/hover = ExtResource("3_fnfcq")
theme_override_styles/pressed = ExtResource("1_f1dwy")
theme_override_styles/focus = ExtResource("1_f1dwy")
text = "Anchor"

[node name="Close" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 196.0
offset_top = 6.0
offset_right = 221.0
offset_bottom = 37.0
text = "X"

[connection signal="pressed" from="Panel/WCW" to="." method="_on_wcw_pressed"]
[connection signal="pressed" from="Panel/Anchor" to="." method="_on_anchor_pressed"]
[connection signal="pressed" from="Panel/Close" to="." method="_on_close_pressed"]
